# ScholarSignal

./: .env.example  NOTICE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  digests.py  events.py  papers.py  preferences.py
backend/app/auth/: anon.py  merge.py  verify.py
backend/app/db/: models.py
backend/app/ingestion/: arxiv_client.py  embed_job.py  ingest_job.py
backend/app/jobs/: scheduler.py  worker.py
backend/app/recommend/: datasets.py  digest.py  features.py  model.py  trainer.py
backend/app/utils/: hashing.py  text.py  time.py
backend/tests/: test_model.py
docs/: prd.md  system_design.md
scripts/: fmt.sh  lint.sh
web/: Dockerfile  next.config.js  package.json  tsconfig.json
web/src/app/api/auth/[...nextauth]/: route.ts
web/src/components/: PaperCard.tsx
web/src/lib/: api.ts
web/src/pages/: _app.tsx  explore.tsx  index.tsx  library.tsx  settings.tsx  today.tsx
web/src/pages/api/auth/: [...nextauth].ts
web/src/pages/paper/: [arxiv_id].tsx
web/src/styles/: globals.css
