[project]
name = "scholarsignal-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pgvector>=0.3",
  "redis>=5.0",
  "rq>=1.16",
  "rq-scheduler>=0.13",
  "python-dateutil>=2.9",
  "httpx>=0.27",
  "feedparser>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "pyarrow>=17.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
